# plpgsql_check

./: .gitignore  .travis.yml  LICENSE  META.json  Makefile  README.md  README.meson_msvc  TODO.md  assign.c  catalog.c  check_function.c  custom_scan_function.md  expr_walk.c  format.c  hashtab.c  install_bindist.py  meson.build  plpgsql_check--0.1.sql  plpgsql_check--0.7.sql  plpgsql_check--0.9.sql  plpgsql_check--1.0--1.1.sql  plpgsql_check--1.0.sql  plpgsql_check--1.1--1.2.sql  plpgsql_check--1.1.sql  plpgsql_check--1.10.sql  plpgsql_check--1.11.sql  plpgsql_check--1.12.sql  plpgsql_check--1.13.sql  plpgsql_check--1.14.sql  plpgsql_check--1.15.sql  plpgsql_check--1.16.sql  plpgsql_check--1.17.sql  plpgsql_check--1.2--1.3.sql  plpgsql_check--1.2.sql  plpgsql_check--1.3--1.4.sql  plpgsql_check--1.3.sql  plpgsql_check--1.4.sql  plpgsql_check--1.5.sql  plpgsql_check--1.6.sql  plpgsql_check--1.7.sql  (+38 more)
.github/workflows/: main.yml
examples/: custom_scan_function.md  custom_scan_function.sql
expected/: README  plch_pragma_generator.out  plch_record_field.out  plpgsql_check.out  plpgsql_check_active-10.out  plpgsql_check_active-11.out  plpgsql_check_active-12.out  plpgsql_check_active-13.out  plpgsql_check_active-14.out  plpgsql_check_active-15.out  plpgsql_check_active-16.out  plpgsql_check_active-17.out  plpgsql_check_active-9.2.out  plpgsql_check_active-9.3.out  plpgsql_check_active-9.4.out  plpgsql_check_active-9.5.out  plpgsql_check_active-9.6.out  plpgsql_check_active.out  plpgsql_check_active_1.out  plpgsql_check_active_2.out  plpgsql_check_active_3.out  plpgsql_check_active_4.out  plpgsql_check_active_5.out  plpgsql_check_passive-10.out  plpgsql_check_passive-12.out  plpgsql_check_passive-13.out  plpgsql_check_passive-14.out  plpgsql_check_passive-9.2.out  plpgsql_check_passive-9.5.out  plpgsql_check_passive-9.6.out  plpgsql_check_passive.out  plpgsql_check_passive_1.out  plpgsql_check_passive_2.out  plpgsql_check_profiler.out  plpgsql_pragma_generator.out
msvc/: plpgsql_check.sln
msvc/plpgsql_check/: plpgsql_check.vcxproj  plpgsql_check.vcxproj.filters
sql/: plch_record_field.sql  plpgsql_check_active-10.sql  plpgsql_check_active-11.sql  plpgsql_check_active-12.sql  plpgsql_check_active-13.sql  plpgsql_check_active-14.sql  plpgsql_check_active-15.sql  plpgsql_check_active-16.sql  plpgsql_check_active-9.2.sql  plpgsql_check_active-9.3.sql  plpgsql_check_active-9.4.sql  plpgsql_check_active-9.5.sql  plpgsql_check_active-9.6.sql  plpgsql_check_active.sql  plpgsql_check_passive-10.sql  plpgsql_check_passive-11.sql  plpgsql_check_passive-13.sql  plpgsql_check_passive-14.sql  plpgsql_check_passive-15.sql  plpgsql_check_passive-9.2.sql  plpgsql_check_passive-9.5.sql  plpgsql_check_passive-9.6.sql  plpgsql_check_passive.sql  plpgsql_check_pragma_generator.sql  plpgsql_check_profiler.sql  plpgsql_pragma_generator.sql
src/: assign.c  catalog.c  check_expr.c  check_function.c  cursors_leaks.c  expr_walk.c  fextra_cache.c  format.c  generic_stmt_walker.c  parse_name.c  parser.c  pldbgapi2.c  pldbgapi3.c  plpgsql_check.c  plpgsql_check.h  plpgsql_check_builtins.h  pragma.c  pragma_generator.c  profiler.c  report.c  stmtwalk.c  tablefunc.c  tracer.c  typdesc.c
